# daimon

./: .gitignore  README.md  cli.py  pyproject.toml  scope.org
config/: default.json
knowledge_base/: cooking-recipes.org  machine-learning.org  philosophy-ethics.org  space-exploration.org
src/: chroma_manager.py  chunking.py  config.py  config_loader.py  parser.py  scanner.py
src/daimonkms/: __init__.py  chroma_manager.py  chunking.py  cli.py
tests/: conftest.py  test_basic.py  test_utils.py
tests/fixtures/: sample.org
