[project]
name = "daimon"
version = "0.1.0"
description = "AI-powered knowledge management assistant"
authors = [
    {name = "landermkerbey",email = "landermkerbey@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb (>=1.0.15,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

